--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
    
 
-    <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src=//code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
     <script src="./quagga.js" type="text/javascript"></script>
     <script src="live_w_locator.js" type="text/javascript"></script>
